--- a/src/pages/search-profile/search-profile.html
+++ b/src/pages/search-profile/search-profile.html
@@ -18,6 +18,14 @@
   <ion-label floating>Username</ion-label>
   <ion-input type="text" [(ngModel)]="username"></ion-input>
 </ion-item>
+<ion-card>
+  <ion-card-content>
+   
+    <p>
+      Simple app to search user and view thier profile
+    </p>
+  </ion-card-content>
+</ion-card>
 
   <ion-fab bottom right>
     <button ion-fab (click)="getUserInformation()">
